--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "last_name" }%>
-    <%= f.input :username,
+    <%# <%= f.input :username,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "username" }%>
@@ -30,7 +30,7 @@
     <%= f.input :bio,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: :bio" }%>
+                input_html: { autocomplete: :"bio" }%>
 
   </div>
 
