added banner and search bar

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
     <%= f.input :bio,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: :"bio" }%>
+                input_html: { autocomplete: "bio" }%>
 
   </div>
 
