home page almost done

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -14,3 +14,13 @@
   text-shadow: 1px 1px 3px black;
   font-family: $title-font;
 }
+
+.container p {
+  color: white;
+  position: relative;
+  top: -70px;
+  font-size: 23px;
+  font-weight: medium;
+  text-shadow: 1px 1px 3px black;
+  font-family: $title-font;
+}
