--- a/app/assets/stylesheets/components/_searchform.scss
+++ b/app/assets/stylesheets/components/_searchform.scss
@@ -1,7 +1,7 @@
 .search-form-control {
   position: relative;
-  top: -10px;
-  right: -218px;
+  top: -40px;
+  right: -217px;
   width: 60%;
   border-radius: 20px;
   align-items: center;
@@ -23,7 +23,38 @@
 }
 
 .search-form-control .form-control:focus {
-  border: 1px solid #1EDD88;
+  border: 1px solid #201ebbd3;
   outline: none !important;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
+
+// @media(width: 992px) {
+// .search-form-control {
+//   position: fixed;
+//   // top: -40px;
+//   // right: -217px;
+//   width: 100%;
+//   border-radius: 20px;
+//   align-items: center;
+//   box-shadow: .6px .6px 1.2px black;
+//   }
+// }
+
+// @media(width: 768px) {
+// .search-form-control {
+//   position: relative;
+//   top: -40px;
+//   right: -217px;
+//   width: 100%;
+//   border-radius: 20px;
+//   align-items: center;
+//   box-shadow: .6px .6px 1.2px black;
+//   }
+// }
+// @media only (min-width: 480px) {
+// .search-form-control {
+//   display: flex;
+//   align-items: center;
+//   width: 60%;
+//   }
+// }
