--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,41 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,71,198,0.1) 0%, rgba(0,36,61,0.1) 93%), url(<%= image_path 'banner1.jpg' %>);">
-  <div class="container">
-    <h1> SAILNATION </h1>
-    <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-    <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query"  />
-      <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-search"></i> Search
-      </button>
+
+    <div class="banner" id="logo" style="background-image: linear-gradient(-225deg, rgba(0,71,198,0.1) 0%, rgba(0,36,61,0.1) 93%), url(<%= image_path 'banner1.jpg' %>);">
+      <div class="container">
+        <h1> SAILNATION </h1>
+        <p> The best Service For Your Boat </p>
+        <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+        <div class="search-form-control form-group">
+          <input class="form-control string required" type="text" name="search[query]" id="search_query"  />
+          <button name="button" type="submit" class="btn btn-flat">
+            <i class="fas fa-search"></i> Search
+          </button>
+        </div>
+      <% end %>
+      </div>
     </div>
-   <% end %>
+ 
+  <div class="container">
+    <section id="about" class="section">
+      <div class="title">
+        <h2>About<span> us</span></h2>
+      </div>
   </div>
-</div>  
+  <div class="content">
+    <section id="services" class="section">
+      <div class="title">
+        <h2>Our<span> Services</span></h2>
+      </div>  
+    </section>
+  </div>  
+    <footer class="section">
+      <p>
+        SAILNATION&copy;
+        <span id="date"></span> - all rights reserved
+      </p>
+      <a class="scroll-link top-link" href="">
+        <i class="fas fa-arrow-up"></i>
+      </a>  
+    </footer>
+  </div>  
 
 
