add boat animation

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,18 @@
       <div class="title">
         <h2>About<span> us</span></h2>
       </div>
+      <div class="animation-wrapper">
+		<div class="water">
+			<ul class="waves">
+				<li class="wave-one" style="background-image: url('https://i.postimg.cc/7LtCC11Y/wave1.png');"></li>
+				<li class="wave-two" style="background-image: url('https://i.postimg.cc/P5hv05rh/wave2.png');"></li>
+				<li class="wave-three" style="background-image: url('https://i.postimg.cc/63Dyc91k/wave3.png');"></li>
+				<li class="wave-four" style="background-image: url('https://i.postimg.cc/1tg8DgM0/wave4.png');"></li>
+			</ul>
+		</div>
+		<div class="boat"></div>
+    <div class="boat2"></div>
+	</div>
   </div>
   <div class="content">
     <section id="services" class="section">
