about cards ready

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,6 +18,34 @@
     <section id="about" class="section">
       <div class="title">
         <h2>About<span> us</span></h2>
+        <section>
+        <div class="card-container">
+          <div class="background-img">
+            <div class="box">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <div class="content">
+                <h4>Community </h4>
+                <h6>The sail community is huge and it's all around the globe !</h6>
+              </div>
+            </div>
+          </div>
+          <div class="background-img2">
+            <div class="box">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <div class="content">
+                <h4>Union </h4>
+                <h6>We are together in this adventure !</h6>
+              </div>
+            </div>
+          </div>          
+        </div>
+      </section>
       </div>
       <div class="animation-wrapper">
 		<div class="water">
