--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,20 +15,19 @@
     </div>
  
   <div class="container">
-    <section id="about" class="section">
-      <div class="title">
-        <h2>About<span> us</span></h2>
-        <section>
-        <div class="card-container">
-          <div class="background-img">
-            <div class="box">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <div class="content">
-                <h4>Community </h4>
-                <h6>The sail community is huge and it's all around the globe !</h6>
+      <section id="about" class="section">
+        <div class="title">
+          <h2>About<span> us</span></h2>
+          <div class="card-container">
+            <div class="background-img">
+              <div class="box">
+                <span></span>
+                <span></span>
+               <span></span>
+               <span></span>
+               <div class="content">
+                <h4><strong>Community</strong></h4>
+                <h6><strong>The sail community is huge and it's all around the globe !</strong></h6>
               </div>
             </div>
           </div>
@@ -39,34 +38,60 @@
               <span></span>
               <span></span>
               <div class="content">
-                <h4>Union </h4>
-                <h6>We are together in this adventure !</h6>
+                <h4><strong>Union</strong></h4>
+                <h6><strong>We are together in this adventure </strong>!</h6>
               </div>
             </div>
           </div>          
         </div>
       </section>
-      </div>
-      <div class="animation-wrapper">
-		<div class="water">
-			<ul class="waves">
-				<li class="wave-one" style="background-image: url('https://i.postimg.cc/7LtCC11Y/wave1.png');"></li>
-				<li class="wave-two" style="background-image: url('https://i.postimg.cc/P5hv05rh/wave2.png');"></li>
-				<li class="wave-three" style="background-image: url('https://i.postimg.cc/63Dyc91k/wave3.png');"></li>
-				<li class="wave-four" style="background-image: url('https://i.postimg.cc/1tg8DgM0/wave4.png');"></li>
-			</ul>
-		</div>
-		<div class="boat"></div>
-    <div class="boat2"></div>
-	</div>
+    </div>
+    <div class="animation-wrapper">
+		  <div class="water">
+			  <ul class="waves">
+				  <li class="wave-one" style="background-image: url('https://i.postimg.cc/7LtCC11Y/wave1.png');"></li>
+				  <li class="wave-two" style="background-image: url('https://i.postimg.cc/P5hv05rh/wave2.png');"></li>
+				  <li class="wave-three" style="background-image: url('https://i.postimg.cc/63Dyc91k/wave3.png');"></li>
+				  <li class="wave-four" style="background-image: url('https://i.postimg.cc/1tg8DgM0/wave4.png');"></li>
+			  </ul>
+	  	</div>
+		  <div class="boat"></div>
+      <div class="boat2"></div>
+	  </div>
   </div>
   <div class="content">
     <section id="services" class="section">
       <div class="title">
         <h2>Our<span> Services</span></h2>
-      </div>  
+        <div class="service-container">
+            <div class="background-service">
+              <div class="box1">
+               <div class="content1">
+                <h4><strong></strong></h4>
+                <h6><strong></strong></h6>
+              </div>
+            </div>
+          </div>
+          <div class="background-service2">
+            <div class="box2">
+              <div class="content2">
+                <h4><strong></strong></h4>
+                <h6><strong></strong></h6>
+              </div>
+            </div>
+          </div>          
+      </div>
+      <div class="extra-container">
+            <div class="background-service3">
+              <div class="service-box">
+               <div class="service-content">
+                <h4><strong></strong></h4>
+                <h6><strong></strong></h6>
+              </div>
+            </div>
+          </div> 
     </section>
-  </div>  
+  </div> 
     <footer class="section">
       <p>
         SAILNATION&copy;
