--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,9 +10,16 @@
 #home {
   position: relative;
   top: 0.5rem;
+  text-decoration: none;
 }
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  color: white;
+}
+
+.nav-link {
+  color: white;
 }
 
 .navbar-lewagon .navbar-brand img {
@@ -31,10 +38,12 @@
 #linkserv {
   position: relative;
   left: 47px;
+  // text-shadow: .7px .7px 1.4px black;
 }
 #linkabout {
   position: relative;
   left: 66px;
+  // text-shadow: .7px .7px 1.4px black;
 }
 
 // @media screen and (width: 992px) {
@@ -80,7 +89,25 @@
   text-decoration: none;
 }
 .links a:hover {
-  color: rgb(0, 0, 0);
+  // color: rgba(193, 194, 204, 0.836);
   // font-size: 23px;
   // text-shadow: .5px .5px 1px black;
+  color: #fff;
+  background: linear-gradient(to left,#084375 40%,  #3f728a 80%, #c7c7c7 10%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2.5s linear infinite;
+  display: inline-block;
+}
+
+@keyframes textclip {
+to {
+  background-position: 200% center;
+}
 }
