service interation working

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -7,8 +7,9 @@
     </button>
   </div>
 <% end %>
+
 <ul>
-  <% @services.each do |service|
+  <% @services.each do |service| %>
     <li><%= service.brand %> - <%= service.part %></li>
   <% end %>
 </ul>
