--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -8,8 +8,19 @@
   </div>
 <% end %>
 
-<ul>
+
   <% @services.each do |service| %>
-    <li><%= service.brand %> - <%= service.part %></li>
-  <% end %>
-</ul>
+    <p><%= service.brand %> - <%= service.part %></p>
+ <div class="card-service">
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+  <%# how to pass the url for the video????? !!!!! %>
+  <div class="card-service-infos">
+    <div>
+      <h2><%= service.part %></h2>
+      <p><%= service.description %></p>
+    </div>
+    <h2 class="card-service-rating">£99.99</h2>
+    <img src="https://kitt.lewagon.com/placeholder/users/krokrob"  class="card-service-user avatar-bordered" />
+  </div>
+</div>
+ <% end %>
