fixing sytax errors

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -19,7 +19,7 @@
       <h2><%= service.part %></h2>
       <p><%= service.description %></p>
     </div>
-    <h2 class="card-service-rating">£99.99</h2>
+    <h2 class="card-service">£99.99</h2>
     <img src="https://kitt.lewagon.com/placeholder/users/krokrob"  class="card-service-user avatar-bordered" />
   </div>
 </div>
