added some javascript

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -139,3 +139,14 @@ footer p {
     transform: scale(1);
   }
 }
+
+.text-center {
+  position: relative;
+  top: 30px;
+}
+
+.typed-header {
+  color:#1b5f9b;
+  font-weight: bolder;
+  
+}
