--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -174,13 +174,13 @@ h6 {
 }
 
 .service-container{  
-  padding-top: 20px;
-  padding-bottom: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: auto;
   grid-gap: .2rem;
   justify-content: center;
+  position: relative;
+  bottom: 30px;
 }
 
 .background-service{
@@ -225,7 +225,8 @@ h6 {
   grid-gap: .2rem;
   justify-content: center;
   position: relative;
-  bottom: 120px;
+  bottom: 150px;
+  
 }
 
 .background-service3{
