--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,10 @@
     <div class="banner" id="logo" style="background-image: linear-gradient(-225deg, rgba(0,71,198,0.1) 0%, rgba(0,36,61,0.1) 93%), url(<%= image_path 'banner1.jpg' %>);">
       <div class="container">
         <h1> SAILNATION </h1>
-        <p> The best Service For Your Boat </p>
+        <p> The Best Service
+        <span class="typed-header"></span>
+        <span class="typed-cursor"></span>
+        </p>
         <%= simple_form_for :search, url: root_path, method: :get do |f| %>
         <div class="search-form-control form-group">
           <input class="form-control string required" type="text" name="search[query]" id="search_query"  />
@@ -66,7 +69,14 @@
         <div class="buttons">
           <%= link_to 'All Services', services_path(@services), class: "btn btn-primary"%>
           <%= link_to 'Create a Service', new_service_path(@service), class: "btn btn-primary"%>
-        </div>  
+        </div>
+        <div class="text-center">
+          <h4>
+            Here you can
+            <span class="typed-js"></span>
+            <span class="typed-cursor">|</span>
+          </h4>
+        </div>   
         <div class="service-container">
             <div class="background-service">
               <div class="box1">
@@ -105,6 +115,7 @@
         <i class="fas fa-arrow-up"></i>
       </a>
     </footer>
-  </div>  
+  </div>
+  
 
 
