--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -140,6 +140,26 @@ footer p {
   }
 }
 
+.footer-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 10px;
+}
+.footer-links a {
+  color: black;
+  opacity: 0.5;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+  position: relative;
+  top: 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
+}
+
 .text-center {
   position: relative;
   top: 30px;
