--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,7 +72,7 @@
         </div>
         <div class="text-center">
           <h4>
-            Here you can
+            Here You Can
             <span class="typed-js"></span>
             <span class="typed-cursor">|</span>
           </h4>
@@ -114,6 +114,13 @@
       <a class="scroll-link top-link" href="">
         <i class="fas fa-arrow-up"></i>
       </a>
+      <div class="footer-links">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+      </div>
     </footer>
   </div>
   
