--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,19 +78,15 @@
           </h4>
         </div>   
         <div class="service-container">
-            <div class="background-service">
+            <div class="background-service background__face--front">
               <div class="box1">
                <div class="content1">
-                <h4><strong></strong></h4>
-                <h6><strong></strong></h6>
               </div>
             </div>
           </div>
           <div class="background-service2">
             <div class="box2">
               <div class="content2">
-                <h4><strong></strong></h4>
-                <h6><strong></strong></h6>
               </div>
             </div>
           </div>          
@@ -99,8 +95,6 @@
             <div class="background-service3">
               <div class="service-box">
                <div class="service-content">
-                <h4><strong></strong></h4>
-                <h6><strong></strong></h6>
               </div>
             </div>
           </div> 
