--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,7 @@
           </h4>
         </div>   
         <div class="service-container">
-            <div class="background-service background__face--front">
+            <div class="background-service">
               <div class="box1">
                <div class="content1">
               </div>
