--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 
 
 <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+<%= link_to "Add New Service", new_service_path %>
+<%= link_to "Back", services_path %>
 
 <h1> Hello
 <%= @user.first_name %>
@@ -9,7 +11,6 @@
 <h3> Bio: </h3>
 <%= @user.bio %>
 
-<%= link_to "Add New Service", new_service_path %>
 
   <% Service.all.each do |service| %>
 
