--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -25,7 +25,23 @@
 <%# show all reviews %>
 <% Review.all.each do |review| %>
   <% if review.service.id == @service.id %>
-  <h3><% review.title %></h3>
-  <p><% review.content %></p>
+  <div class="notification">
+    <img src='https://kitt.lewagon.com/placeholder/users/arthur-littm' class="avatar-large" />
+    <div class="notification-content">
+      <p><small>Date.day</small></p>
+      <p><%= review.content %> <strong>consectetur</strong> adipisicing elit.</p>
+    </div>
+
+    <div class="notification-actions">
+      <a href="#">Edit <i class="fas fa-pencil-alt"></i></a>
+      <a href="#">Delete <i class="far fa-trash-alt"></i></a>
+    </div>
+
+    <div class="review-stars"> <%# yuhri, class review stars doesn't exist yet %>
+      <p><%= review.stars %></p>
+    </div>
+  </div>
+
   <% end %>
 <% end %>
+
