--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -19,6 +19,8 @@
             <h2><%= service.part %></h2>
             <p><%= service.description %></p>
             <p><%= service.brand %></p>
+            <%= link_to "See service", "./services/#{service.id}" %>
+
           </div>
           <div class="card-servive-container-avatar">
             <img src="https://kitt.lewagon.com/placeholder/users/krokrob"  class="avatar-bordered" />
