--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -29,7 +29,7 @@
     <img src='https://kitt.lewagon.com/placeholder/users/arthur-littm' class="avatar-large" />
     <div class="notification-content">
       <p><small>Date.day</small></p>
-      <p><%= review.content %> <strong>consectetur</strong> adipisicing elit.</p>
+      <p><%= review.content %></p>
     </div>
 
     <div class="notification-actions">
@@ -45,3 +45,23 @@
   <% end %>
 <% end %>
 
+<%# form for new review %>
+<div class="notification">
+  <img src='https://kitt.lewagon.com/placeholder/users/arthur-littm' class="avatar-large" />
+  <div class="notification-content">
+    <p><small>14th January</small></p>
+
+    <form novalidate=“novalidate” class=“simple_form search” action=“/” accept-charset=“UTF-8" method=“get”><input name=“utf8" type=“hidden” value=“&#x2713;” />
+      <div class=“search-form-control form-group”>
+        <input class=“form-control string required” type=“text” name=“search[query]” id=“search_query” />
+        <button name=“button” type=“submit” class=“btn btn-flat”>
+          <i class=“fas fa-search”></i> Post
+        </button>
+      </div>
+    </form>
+  </div>
+
+  <div class="notification-actions">
+   <%# comment stars here %>
+  </div>
+</div>
