--- a/app/assets/stylesheets/components/_card-service.scss
+++ b/app/assets/stylesheets/components/_card-service.scss
@@ -1,51 +1,52 @@
 
 
+// GUYS, I DON'T KNOW WHO DID THIS, BUT I'M NOT USING IT --- Yuhri
 
- .card-service {
-  overflow: hidden;
-  background: red;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-}
+//  .card-service {
+//   overflow: hidden;
+//   background: red;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+// }
 
-.card-service > img {
-  height: 200px;
-  width: 100%;
-  object-fit: cover;
-}
+// .card-service > img {
+//   height: 200px;
+//   width: 100%;
+//   object-fit: cover;
+// }
 
-.card-service h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
+// .card-service h2 {
+//   font-size: 16px;
+//   font-weight: bold;
+//   margin: 0;
+// }
 
-.card-service p {
-  font-size: 12px;
-  opacity: .7;
-  margin: 0;
-}
-
-
-.card-service .card-service-infos {
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
-}
-
-.card-service-infos .card-service-user {
-  position: absolute;
-  right: 16px;
-  top: -20px;
-  width: 40px;
-}
+// .card-service p {
+//   font-size: 12px;
+//   opacity: .7;
+//   margin: 0;
+// }
 
 
-.card-service-rating {
-  position: absolute;
-  right: 16px;
-  top: -20px;
-  width: 40px;
-}
+// .card-service .card-service-infos {
+//   padding: 16px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: flex-end;
+//   position: relative;
+// }
+
+// .card-service-infos .card-service-user {
+//   position: absolute;
+//   right: 16px;
+//   top: -20px;
+//   width: 40px;
+// }
+
+
+// .card-service-rating {
+//   position: absolute;
+//   right: 16px;
+//   top: -20px;
+//   width: 40px;
+// }
 
