--- a/app/assets/stylesheets/components/_justin.scss
+++ b/app/assets/stylesheets/components/_justin.scss
@@ -1,91 +1,93 @@
-.content {
-  display: flex;
-  margin: 25px;
-  border: 1px;
-  border-color: red;
-}
+// THIS CSS WAS JUSTIN TRYING TO DO THE GRID OF CARDS
 
-.cards {
-  display: grid;
+// .content {
+//   display: flex;
+//   margin: 25px;
+//   border: 1px;
+//   border-color: red;
+// }
 
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
+// .cards {
+//   display: grid;
 
-  border: 1px;
-  border-color: red;
-}
- @media( max-width: 1600px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr ;
+//   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+//   grid-gap: 16px;
 
-
-  border: 1px;
-  border-color: red;
-  }
-}
-
- @media( max-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+//   border: 1px;
+//   border-color: red;
+// }
+//  @media( max-width: 1600px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr ;
 
 
-  border: 1px;
-  border-color: red;
-  }
-}
+//   border: 1px;
+//   border-color: red;
+//   }
+// }
+
+//  @media( max-width: 1200px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr 1fr;
 
 
-@media( max-width: 992px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr ;
+//   border: 1px;
+//   border-color: red;
+//   }
+// }
 
 
-  border: 1px;
-  border-color: red;
-  }
-}
-
-@media( max-width: 768px) {
-  .cards {
-    grid-template-columns: 1fr;
-
-  border: 1px;
-  border-color: red;
-  }
-}
+// @media( max-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr ;
 
 
-.card {
-  height: 250px;
-  border-radius: 1px;
-  margin: 15px 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  position: relative;
+//   border: 1px;
+//   border-color: red;
+//   }
+// }
 
-  color: grey;
-  border-color: red;
-  font-weight: bolder;
-  text-shadow: 0 0 10px rgba(0,0,0,0.7);
+// @media( max-width: 768px) {
+//   .cards {
+//     grid-template-columns: 1fr;
 
-}
+//   border: 1px;
+//   border-color: red;
+//   }
+// }
 
-.card-service-container {
-  // width: auto;
-  // overflow: hidden;
-  display: flex;
-}
 
-.card-service-container-image {
-  height: 200px;
-  width: 100%;
-  object-fit: cover;
-}
+// .card {
+//   height: 250px;
+//   border-radius: 1px;
+//   margin: 15px 10px;
+//   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+//   display: flex;
+//   align-items: flex-end;
+//   justify-content: space-between;
+//   position: relative;
 
-.card-service-container-infos {
-  display: flex;
-  align-items: bottom;
+//   color: grey;
+//   border-color: red;
+//   font-weight: bolder;
+//   text-shadow: 0 0 10px rgba(0,0,0,0.7);
 
-}
+// }
+
+// .card-service-container {
+//   // width: auto;
+//   // overflow: hidden;
+//   display: flex;
+// }
+
+// .card-service-container-image {
+//   height: 200px;
+//   width: 100%;
+//   object-fit: cover;
+// }
+
+// .card-service-container-infos {
+//   display: flex;
+//   align-items: bottom;
+
+// }
