--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active" id="home">
-          <strong><%= link_to "Home", "#", class: "nav-link", class: "scroll-link" %></strong>
+          <strong><%= link_to "Home", root_path, class: "nav-link", class: "scroll-link" %></strong>
         </li>    
         <li class="nav-item">
           <%= link_to "Messages", "#", class: "nav-link" %>
