everything added, need to fix path /plugins .js

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -20,7 +20,12 @@
   </div>
 </div>
 
-<%# form for new reviews %>
+<%# mapbox %>
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
 
 <%# show all reviews %>
 <% Review.all.each do |review| %>
