stuck at button in home view, to interact with controller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,12 @@
           <button name="button" type="submit" class="btn btn-flat">
             <i class="fas fa-search"></i> Search
           </button>
+          <%#---<%= button_to 'Press to Search', button_path, method: :search_by_brand_and_part %>
         </div>
        <% end %>
       </div>
     </div>
- 
+
   <div class="container">
       <section id="about" class="section">
         <div class="title">
@@ -45,7 +46,7 @@
                 <h6><strong>We are together in this adventure </strong>!</h6>
               </div>
             </div>
-          </div>          
+          </div>
         </div>
       </section>
     </div>
@@ -76,7 +77,7 @@
             <span class="typed-js"></span>
             <span class="typed-cursor">|</span>
           </h4>
-        </div>   
+        </div>
         <div class="service-container">
             <div class="background-service">
               <div class="box1">
@@ -89,7 +90,7 @@
               <div class="content2">
               </div>
             </div>
-          </div>          
+          </div>
       </div>
       <div class="extra-container">
             <div class="background-service3">
@@ -97,7 +98,7 @@
                <div class="service-content">
               </div>
             </div>
-          </div> 
+          </div>
     </section>
   </div>
     <footer class="section">
@@ -116,6 +117,3 @@
         <a href="#"><i class="fab fa-linkedin"></i></a>
       </div>
     </footer>
-  
-
-
