front-ended user service and pages details

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -28,7 +28,7 @@
 .services-banner {
   background-size: cover;
   background-position: center;
-  height: 200px;
+  // height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +37,6 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
   box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
   opacity: .95;
-  height: 50vh;
-	max-height: 500px;
- 
+  // height: 50vh;
+	min-height: 70vh;
 }
