--- a/app/assets/stylesheets/components/_searchform.scss
+++ b/app/assets/stylesheets/components/_searchform.scss
@@ -1,8 +1,8 @@
 .search-form-control {
-  position: relative;
-  top: -40px;
-  right: -217px;
-  width: 60%;
+  position: absolute;
+  top: 600px;
+  right: 566px;
+  width: 40%;
   border-radius: 20px;
   align-items: center;
   box-shadow: .6px .6px 1.2px black;
