styled profile page

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -55,4 +55,25 @@
           </div>
         </div>
       </div>
-  </div>
+    </div>
+      <%# <footer class="section2">
+        <p>
+          SAILNATION&copy;
+          <span id="date"></span> - all rights reserved
+        </p>
+        <a class="scroll-link top-link2" href="">
+          <i class="fas2 fa-arrow-up"></i>
+        </a>
+        <div class="footer-links2">
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+     </footer>
+    </div>   %>
+  <div>
+    <div class="trapezoid "></div>
+    <div class="square"></div>
+    <div class="square2"></div>
