--- a/app/assets/stylesheets/components/_servicesreview.scss
+++ b/app/assets/stylesheets/components/_servicesreview.scss
@@ -67,12 +67,45 @@
     position: absolute;
     top:29rem;
     right:50rem;
-    width: 30rem;
-    background-color: rgba(145, 211, 255, 0.267);
-    padding: 50px;
-    border-radius: 50px;
+    width: 35rem;
+    background: linear-gradient(to bottom, rgb(218, 225, 255), rgba(131, 142, 163, 0.7));
+    padding: 60px;
+    border-radius: 100px;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;  
   }
+
+  .trapezoid {
+    border-bottom: 50px solid rgb(218, 225, 255);
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    height: 0;
+    width: 125px;
+    position: absolute;
+    top:26rem;
+    right:70rem;
+    width: 9rem;
+  }
+
+  .square {
+    height: 50px;
+    background-color: rgb(218, 225, 255);
+    position: absolute;
+    top:23rem;
+    right:73.8rem;
+    width: 1.5rem;
+  }
+
+  .square2 {
+    background-color: rgb(218, 225, 255);
+    position: absolute;
+    top:23rem;
+    right:72.7rem;
+    width: 2rem;
+    height: 1.3rem;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
+  }
+
 // I CAN'T EDDIT THIS FORM BOX WITHOUT CHANGING THE OTHER FKKK MEEE !!!
 
 //  .form-control {
@@ -87,7 +120,7 @@
 
  #button-form {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  border-radius: 20px;
+  border-radius: 15px;
   background-color: rgba(77, 141, 184, 0.267);
   font-family: $title-font;
   font-weight: bold;
