--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,90 +5,77 @@
   
     <div class="row gutters-sm">
       <div class="col-md-4 mb-3">
-        <div class="card">
-          <div class="card-body">
+        <div class="card-user-profile">
+          <div class="card-user-profile-body">
             <div class="d-flex flex-column align-items-center text-center">
               <img src="https://kitt.lewagon.com/placeholder/users/arthur-littm" alt="Admin" class="rounded-circle" width="150">
               <div class="mt-3">
-                <h4>Rony Weasley</h4>
-                <p class="text-secondary mb-1">Full Stack Developer</p>
-                <p class="text-muted font-size-sm">Grajaú, Rio de Janeiro, RJ</p>
+                <%= @user.first_name %>
+                <h5 class="mb-1 font-size-md p-4">Electro-technical officer</h5>
                 <%= link_to "Find Service", services_path, class: "btn btn-outline-primary" %>
                 <%= link_to 'Create Service', new_service_path(@service), class: "btn btn-outline-primary" %>
               </div>
             </div>
           </div>
         </div>
-        <div class="card mt-3">
+        <div class="card-user-profile mt-3">
           <ul class="list-group list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h6>
+              <h5 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h5>
               <span class="text-secondary">https://bbbbb.com</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube mr-2 icon-inline"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>YouTube</h6>
-              <span class="text-secondary">bbbbbb</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
+              <h5 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h5>
               <span class="text-secondary">@bbbbbb</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
+              <h5 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h5>
               <span class="text-secondary">bbbbbb</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
+              <h5 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h5>
               <span class="text-secondary">bbbbbb</span>
             </li>
           </ul>
         </div>
       </div>
       <div class="col-md-8">
-        <div class="card mb-3">
-          <div class="card-body">
+        <div class="card-user-profile mb-3">
+          <div class="card-user-profile-body">
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Full Name</h6>
+                <h5 class="mb-0">Full Name</h5>
               </div>
               <div class="col-sm-9 text-secondary">
-                Rony Weasley
+                <%= @user.first_name %>
               </div>
             </div>
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Email</h6>
+                <h5 class="mb-0">Email</h5>
               </div>
               <div class="col-sm-9 text-secondary">
-                ronweasley@gmail.com
+                <%= @user.email %>
               </div>
             </div>
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Phone</h6>
+                <h5 class="mb-0">Phone</h5>
               </div>
               <div class="col-sm-9 text-secondary">
-                (239) 816-9029
+                <%= @user.phone_num%>
               </div>
             </div>
             <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Mobile</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                (320) 380-4539
-              </div>
-            </div>
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Address</h6>
+                <h5 class="mb-0">Address</h5>
               </div>
               <div class="col-sm-9 text-secondary">
-                Grajaú, Rio de Janeiro, RJ
+                <%= @user.location%>
               </div>
             </div>
             <hr>
@@ -102,53 +89,26 @@
 
         <div class="row gutters-sm">
           <div class="col-sm-6 mb-3">
-            <div class="card h-100">
-              <div class="card-body">
-                <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Spacialization</i>Level Status</h6>
-                <small>-</small>
+            <div class="card-user-profile h-100">
+              <div class="card-user-profile-body">
+                <h5 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Spacialization</i>Level Status</h5>
+                <small>Eletricity</small>
                 <div class="progress mb-3" style="height: 5px">
                   <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <small>-</small>
+                <small>Sail</small>
                 <div class="progress mb-3" style="height: 5px">
                   <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <small>-</small>
+                <small>Enginees</small>
                 <div class="progress mb-3" style="height: 5px">
                   <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <small>-</small>
+                <small>Security</small>
                 <div class="progress mb-3" style="height: 5px">
                   <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <small>-</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 mb-3">
-            <div class="card h-100">
-              <div class="card-body">
-                <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Spacialization</i>Level Status</h6>
-                <small>-</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>-</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>-</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>-</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>-</small>
+                <small>Rudder</small>
                 <div class="progress mb-3" style="height: 5px">
                   <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -156,39 +116,29 @@
             </div>
           </div>
         </div>
-
-
-
-        </div>
-      </div>
+        <% Service.all.each do |service| %>
+          <% if service.user.id == @user.id %>
+            </div>
+          <% end %>  
+         </div>
+        <% end %> 
 
     </div>
-</div>
-<img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
-<%= link_to "Add New Service", new_service_path %>
-<%= link_to "Back", services_path %>
 
-<h1> Hello
-<%= @user.first_name %>
-</h1>
-
-<h3> Bio: </h3>
-<%= @user.bio %>
-
-
-  <% Service.all.each do |service| %>
-
-    <% if service.user.id == @user.id %>
-
-    <div class=“card-service”>
-      <img src=“https://kitt.lewagon.com/placeholder/users/arthur-littm” />
-      <div class=“card-service-infos”>
-        <div>
-          <h3><%= service.brand %> </h3>
-        </div>
-        <h4 class=“card-service-pricing”>Rating: </h4>
-        <img src=“https://kitt.lewagon.com/placeholder/users/krokrob” class=“card-service-user avatar-bordered” />
-      </div>
-    <% end %>
-  <% end %>
-</div>
+  <footer class="section2">
+    <p>
+      SAILNATION&copy;
+      <span id="date"></span> - all rights reserved
+    </p>
+    <a class="scroll-link top-link2" href="">
+      <i class="fas2 fa-arrow-up"></i>
+    </a>
+    <div class="footer-links2">
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </footer>
+</div>  
