all this part done

--- a/app/assets/stylesheets/components/_animation.scss
+++ b/app/assets/stylesheets/components/_animation.scss
@@ -86,7 +86,7 @@
   left: 50%;
 	position: absolute;
   width: 250px;
-  background-image: url("boat1.png");
+  background-image: url("https://res.cloudinary.com/yuhri/image/upload/v1629986858/boat1_xiat88.png");
 }
 
 .boat2{
@@ -97,7 +97,7 @@
   left: 30%;
 	position: absolute;
   width: 250px;
-  background-image: url("boat4.png");
+  background-image: url("https://res.cloudinary.com/yuhri/image/upload/v1629986866/boat4_dv01lk.png");
 }
 
 @keyframes wave{
