--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -14,7 +14,7 @@
 }
 
 .background-img{
-  background-image: url("card1.jpg");
+  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986874/card1_c6vila.jpg');
   height: 400px;
   width: 800px;
   background-repeat: no-repeat;
@@ -31,7 +31,7 @@
 }
 
 .background-img2{
-  background-image: url("card2.jpg");
+  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986880/card2_rexi3j.jpg');
   height: 400px;
   width: 800px;
   background-repeat: no-repeat;
@@ -186,7 +186,7 @@ h6 {
 }
 
 .background-service{
-  background-image: url("service4.jpg");
+  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986887/service4_xos0co.jpg');
   height: 350px;
   width: 700px;
   background-repeat: no-repeat;
@@ -204,7 +204,7 @@ h6 {
 }
 
 .background-service2{
-  background-image: url("service2.jpg");
+  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986887/service2_nrxip5.jpg');
   height: 350px;
   width: 700px;
   background-repeat: no-repeat;
@@ -232,7 +232,7 @@ h6 {
 }
 
 .background-service3{
-  background-image: url("service3.jpg");
+  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986888/service3_ptjdr5.jpg');
   height: 350px;
   width: 700px;
   background-repeat: no-repeat;
