--- a/app/assets/stylesheets/components/_userprofile.scss
+++ b/app/assets/stylesheets/components/_userprofile.scss
@@ -1,6 +1,6 @@
 .main-body {
   padding: 70px;
-  background-image: linear-gradient(-225deg, rgba(0,71,198,0.1) 50%, rgba(0,36,61,0.3) 93%), url('boatalone.jpg');
+  background-image: linear-gradient(-225deg, rgba(0,71,198,0.1) 50%, rgba(0,36,61,0.3) 93%), url('https://res.cloudinary.com/yuhri/image/upload/v1630024628/boatalone_o4whyj.jpg');
   background-size: cover;
   background-position-y: -620px;
   position:relative;
@@ -87,14 +87,17 @@
   background: linear-gradient(to bottom, rgba(63, 152, 212, 0.5), rgb(53, 53, 53));
   padding: 5rem 1rem;
   -webkit-mask-image: linear-gradient(to bottom, transparent 1%, black 3%);
-  mask-image: linear-gradient(to bottom, transparent 1%, black 3%); 
+  mask-image: linear-gradient(to bottom, transparent 1%, black 3%);
 }
 .section2 p {
   color: white;
   text-align: center;
   text-transform: capitalize;
   letter-spacing: 0.25rem;
-  margin-bottom: 0;
+  position: relative;
+  bottom: 4.5rem;
+  font-weight: bold;
+  font-family: $title-font;
 }
 
 .footer-links2 {
@@ -120,4 +123,26 @@
 .text-secundary {
   position:absolute;
   bottom:50px;
+}
+
+#map {
+  // position: relative;
+  // left:75rem;
+  // bottom: 52.5rem;
+  position: fixed;
+  top: 4.8rem;
+  right: 0.6rem;
+}
+
+.footer-content {
+  position:fixed;
+  bottom: 0;
+  width: 100%;
+  height: 4rem;
+}
+
+.btn-info {
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  
 }
