--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -121,31 +121,33 @@
             </div>
           <% end %>  
          </div>
-        <% end %> 
+        <% end %>
+        <div id="map"
+          style="width: 50.6rem; height: 51.75rem;"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
 
     </div>
 
-<%# mapbox %>
-<div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+
+
 </div>
-
-  <footer class="section2">
-    <p>
-      SAILNATION&copy;
-      <span id="date"></span> - all rights reserved
-    </p>
-    <a class="scroll-link top-link2" href="">
-      <i class="fas2 fa-arrow-up"></i>
-    </a>
-    <div class="footer-links2">
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-    </div>
-  </footer>
-</div>  
+  <div class="footer-content">
+    <footer class="section2">
+      <p>
+        SAILNATION&copy;
+        <span id="date"></span> - all rights reserved
+      </p>
+      <a class="scroll-link top-link2" href="">
+        <i class="fas2 fa-arrow-up"></i>
+      </a>
+      <div class="footer-links2">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </footer>
+  </div>  
